--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <ul>
       <li><a href="https://atranathemes.github.io/">Atrana</a></li>
     </ul>
+     <h3>Profile</h3>
+    <ul>
+      <li><a href="https://www.cloudskillsboost.google/public_profiles/c1a89aab-ec29-4448-aa5d-c13defa35f53">Cloud Skills Boost</a></li>
+    </ul>
     <h3>Social</h3>
     <ul>
       <li><a href="https://www.instagram.com/drecodeeea/">Instagram</a></li>
