--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Welcome</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andre - Personal Portofolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hi, I am Andre Tri Ramadana.</h1>
-    <h3>Projects</h3>
-    <ul>
-      <li><a href="https://atranathemes.github.io/">Atrana</a></li>
-    </ul>
-     <h3>Profile</h3>
-    <ul>
-      <li><a href="https://www.cloudskillsboost.google/public_profiles/c1a89aab-ec29-4448-aa5d-c13defa35f53">Cloud Skills Boost</a></li>
-    </ul>
-    <h3>Social</h3>
-    <ul>
-      <li><a href="https://www.instagram.com/drecodeeea/">Instagram</a></li>
-      <li><a href="https://www.linkedin.com/in/andre-tri-ramadana-1929b61a9/">LinkedIn</a></li>
-    </ul>
-    <footer>
-      <p>Copyright &copy; <script>new Date().getFullYear()>2016&&document.write(+new Date().getFullYear());</script></p>
-    </footer>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
